# notifications

./: Dockerfile  REAMDE.md  docker-compose.yml  pyproject.toml
src/: .env.example  main.py  settings.py
src/gateway/: __init__.py  gateway.py  interfaces.py
src/schemas/: request_schema.py
src/services/: email.py  sms.py  telegram.py
src/utils/: exceptions.py
