[tool.poetry]
name = "notifications"
version = "0.1.0"
description = ""
authors = ["Рустэм"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aio-pika = "^9.5.7"
httpx = "^0.28.1"
aiosmtplib = "^4.0.1"
pydantic = {extras = ["email"], version = "^2.11.7"}
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
